# docs/swagger.json
@@ -28,7 +28,7 @@
                     "200": {
                         "description": "Action details",
                         "schema": {
-                            "$ref": "#/definitions/model.Action"
+                            "$ref": "#/definitions/model.ActionExternal"
                         }
                     },
                     "401": {
@@ -110,7 +110,7 @@
                     "200": {
                         "description": "Action details",
                         "schema": {
-                            "$ref": "#/definitions/model.Action"
+                            "$ref": "#/definitions/model.ActionExternal"
                         }
                     },
                     "404": {
@@ -1509,7 +1509,7 @@
                     "200": {
                         "description": "Domain details",
                         "schema": {
-                            "$ref": "#/definitions/model.Domain"
+                            "$ref": "#/definitions/model.DomainExternal"
                         }
                     },
                     "401": {
@@ -1591,7 +1591,7 @@
                     "200": {
                         "description": "domain details",
                         "schema": {
-                            "$ref": "#/definitions/model.Domain"
+                            "$ref": "#/definitions/model.DomainExternal"
                         }
                     },
                     "404": {
@@ -1710,7 +1710,7 @@
                     "200": {
                         "description": "Feat details",
                         "schema": {
-                            "$ref": "#/definitions/model.Feat"
+                            "$ref": "#/definitions/model.FeatExternal"
                         }
                     },
                     "401": {
@@ -1840,7 +1840,7 @@
                     "200": {
                         "description": "Feat details",
                         "schema": {
-                            "$ref": "#/definitions/model.Feat"
+                            "$ref": "#/definitions/model.FeatExternal"
                         }
                     },
                     "403": {
@@ -2102,7 +2102,7 @@
                     "200": {
                         "description": "Feat details",
                         "schema": {
-                            "$ref": "#/definitions/model.Feat"
+                            "$ref": "#/definitions/model.FeatExternal"
                         }
                     },
                     "401": {
@@ -3179,7 +3179,7 @@
                     "200": {
                         "description": "Trait details",
                         "schema": {
-                            "$ref": "#/definitions/model.Trait"
+                            "$ref": "#/definitions/model.TraitExternal"
                         }
                     },
                     "401": {
@@ -3261,7 +3261,7 @@
                     "200": {
                         "description": "Trait details",
                         "schema": {
-                            "$ref": "#/definitions/model.Trait"
+                            "$ref": "#/definitions/model.TraitExternal"
                         }
                     },
                     "404": {
@@ -5795,6 +5795,9 @@
                     "items": {
                         "$ref": "#/definitions/model.Character"
                     }
+                },
+                "email": {
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
